<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        class="com.google.android.gms.maps.SupportMapFragment" />
    <ImageView
        android:id="@+id/compass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true" />
    <TextView
        android:id="@+id/direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/north"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_alignStart="@id/compass"
        android:layout_alignTop="@id/compass"
        android:layout_alignBottom="@id/compass"
        android:layout_alignEnd="@id/compass" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignEnd="@id/map">
        <TextView
            android:id="@+id/tracking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:text="@string/tracking"
            android:textColor="@color/red" />
        <CheckBox
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/type" />

        <ImageButton
            android:id="@+id/currLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/curr"
            android:layout_marginTop="3dp"
            android:backgroundTint="@color/white" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/map"
        android:layout_alignEnd="@id/map"
        android:layout_marginEnd="5dp"
        android:orientation="vertical">
        <CheckBox
            android:id="@+id/enable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable"
            android:layout_gravity="center"
            android:background="@color/white"
            android:checked="false"/>
        <Button
            android:id="@+id/start_track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:text="@string/start" />
        <Button
            android:id="@+id/stop_track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:textColor="@color/black"
            android:text="@string/stop" />
    </LinearLayout>
    <Button
        android:id="@+id/view_track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:textColor="@color/black"
        android:layout_alignBottom="@id/map"
        android:layout_alignStart="@id/map"
        android:layout_marginStart="5dp"
        android:text="@string/view_track" />
</RelativeLayout>